tests/testcases/errors/BCE0124-1.boo
"""
BCE0124-1.boo(5,10): BCE0124: Invalid field type 'void'.
"""
class Foo:
	i as void
